--- a/deployment/images/Dockerfile.deb-tools
+++ b/deployment/images/Dockerfile.deb-tools
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     make \
     curl \
     jq \
+    git \
     apt-transport-https \
     ca-certificates \
     gnupg \
