--- a/deployment/images/Dockerfile.deb-tools
+++ b/deployment/images/Dockerfile.deb-tools
@@ -13,7 +13,13 @@ RUN apt-get update && apt-get install -y \
     apt-transport-https \
     ca-certificates \
     gnupg \
+    python3.11 \
+    python3-pip \
+    pipx \
     && rm -rf /var/lib/apt/lists/*
+
+RUN pipx ensurepath
+RUN pipx install poetry
 
 # Add Kubernetes repository and install kubectl
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
