remove live and ready probes

--- a/deployment/vllm/autoscaler.yml
+++ b/deployment/vllm/autoscaler.yml
@@ -57,18 +57,18 @@ spec:
               value: "scope-dsmr"
             - name: PROXY_TIMEOUT # New setting for HTTP client timeout
               value: "30.0"
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 8000
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: 8000
-            initialDelaySeconds: 5
-            periodSeconds: 10
+          # livenessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: 8000
+          #   initialDelaySeconds: 5
+          #   periodSeconds: 10
+          # readinessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: 8000
+          #   initialDelaySeconds: 5
+          #   periodSeconds: 10
       volumes:
         - name: kube-config
           secret:
