Add more scaler shortcuts

--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -1,6 +1,6 @@
 # Variables
 SERVICE_URL := http://vllm-svc:8000
-AUTOSCALER_URL := http://vllm-autoscaler-service:80
+AUTOSCALER_URL := http://vllm-autoscaler-service:8000
 CONTENT_TYPE := application/json
 MODEL_NAME := mistralai/Mistral-7B-Instruct-v0.3
 PROMPT := \"Give a detailed summary of the various activities to do in San Francisco.\"
@@ -15,9 +15,17 @@ list-models:
 	@echo "Listing available models..."
 	@curl -s -X GET "$(SERVICE_URL)/v1/models" | jq
 
-auto-health:
+scaler-health:
 	@echo "Testing autoscaler health endpoint..."
-	@curl -s -X GET "$(AUTOSCALER_URL)" | jq
+	@curl -X GET "$(AUTOSCALER_URL)/health" | jq
+
+scaler-up:
+	@echo "Scaling up..."
+	@curl -s -X POST "$(AUTOSCALER_URL)/scale/1" | jq
+
+scaler-down:
+	@echo "Scaling down..."
+	@curl -X POST "$(AUTOSCALER_URL)/scale/0" | jq
 
 generate-tokens:
 	@echo "Generating tokens..."
