--- a/deployment/images/Dockerfile.deb-tools
+++ b/deployment/images/Dockerfile.deb-tools
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install -y \
     python3.11 \
     python3-pip \
     pipx \
+    rsync \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pipx ensurepath
