--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -18,6 +18,7 @@ llama-index-program-openai = ">=0.1.4"
 llama-index-llms-openai-like = "^0.2.0"
 llama-index-embeddings-text-embeddings-inference = "^0.2.0"
 llama-index-vector-stores-qdrant = "^0.3.0"
+pydantic = "^2.10.6"
 
 
 [tool.poetry.group.dev.dependencies]
