--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -12,12 +12,12 @@ fastapi = ">=0.109.2"
 uvicorn = ">=0.27.1"
 python-dotenv = ">=1.0.1"
 pydantic-settings = ">=2.5.2"
-llama-index-core = ">=0.10.12"
-llama-index-llms-together = ">=0.1.3"
-llama-index-program-openai = ">=0.1.4"
-llama-index-llms-openai-like = "^0.2.0"
-llama-index-embeddings-text-embeddings-inference = "^0.2.0"
-llama-index-vector-stores-qdrant = "^0.3.0"
+llama-index-core = "*"
+llama-index-program-openai = "*"
+llama-index-llms-openai-like = "*"
+llama-index-embeddings-text-embeddings-inference = "*"
+llama-index-vector-stores-qdrant = "*"
+llama-index-readers-file = "*"
 pydantic = "^2.10.6"
 
 
