--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -19,6 +19,7 @@ llama-index-embeddings-text-embeddings-inference = "*"
 llama-index-vector-stores-qdrant = "*"
 llama-index-readers-file = "*"
 pydantic = "^2.10.6"
+docx2txt = "^0.8"
 
 
 [tool.poetry.group.dev.dependencies]
