use custom dockerfile

--- a/deployment/vllm/qwen2.5.yaml
+++ b/deployment/vllm/qwen2.5.yaml
@@ -12,14 +12,14 @@ spec:
       labels:
         app: vllm-qwen2-5
     spec:
-      # imagePullSecrets:
-      #   - name: github-registry-secret
+      imagePullSecrets:
+        - name: github-registry-secret
       nodeSelector:
         nvidia.com/gpu.product: NVIDIA-A40
       containers:
         - name: vllm
-          image: vllm/vllm-openai:latest
-          # image: ghcr.io/wmgeolab/vllm-qwen
+          # image: vllm/vllm-openai:latest
+          image: ghcr.io/wmgeolab/vllm-qwen
           imagePullPolicy: Always
           command: ["/bin/sh", "-c"]
           args: # --kv-cache-dtype fp8_e5m2
