--- a/deployment/images/Dockerfile.vllm-nonroot
+++ b/deployment/images/Dockerfile.vllm-nonroot
@@ -1,4 +1,4 @@
-FROM vllm/vllm-openai:latest
+FROM vllm/vllm-openai:v0.7.3
 # RUN pip install git+https://github.com/huggingface/transformers.git
 
 # Use geolab group (50036) and sawyer's id (237827)
