--- a/deployment/vllm/internvl2.5.yaml
+++ b/deployment/vllm/internvl2.5.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vllm-internvl25
+  namespace: scope-dsmr
 spec:
   replicas: 1
   selector:
@@ -84,6 +85,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vllm-internvl25-svc
+  namespace: scope-dsmr
 spec:
   selector:
     app: vllm-internvl25
