Add subPath for services.yaml in autoscaler deployment configuration

--- a/deployment/autoscaler/autoscaler.yml
+++ b/deployment/autoscaler/autoscaler.yml
@@ -65,6 +65,7 @@ spec:
               readOnly: true
             - name: autoscaler-services-config
               mountPath: /app/services.yaml
+              subPath: services.yaml
           resources:
             requests:
               memory: "128Mi" # Increased slightly for Python runtime
