--- a/k8s-autoscaler/pyproject.toml
+++ b/k8s-autoscaler/pyproject.toml
@@ -12,6 +12,7 @@ httpx = "^0.27.2"
 uvicorn = "^0.32.0"
 pydantic-settings = "^2.6.0"
 pyyaml = "^6.0.2"
+kubernetes = "^32.0.1"
 
 
 [build-system]
