--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -20,6 +20,7 @@ llama-index-vector-stores-qdrant = "*"
 llama-index-readers-file = "*"
 pydantic = "^2.10.6"
 docx2txt = "^0.8"
+llama-index-multi-modal-llms-openai = "^0.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
