--- a/deployment/cloudflared.yaml
+++ b/deployment/cloudflared.yaml
@@ -1,45 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: cloudflared
   labels:
     app: cloudflared
-  name: cloudflared-deployment
-  namespace: default
 spec:
   replicas: 2
   selector:
     matchLabels:
-      pod: cloudflared
+      app: cloudflared
   template:
     metadata:
       labels:
-        pod: cloudflared
+        app: cloudflared
     spec:
-      securityContext:
-        sysctls:
-          - name: net.ipv4.ping_group_range
-            value: "65532 65532"
       containers:
-        - command:
-            - cloudflared
+        - name: cloudflared
+          image: cloudflare/cloudflared:latest
+          args:
             - tunnel
             - --no-autoupdate
-            # In a k8s environment, the metrics server needs to listen outside the pod it runs on.
-            # The address 0.0.0.0:2000 allows any pod in the namespace.
-            - --metrics
-            - 0.0.0.0:2000
             - run
-          args:
-            - --token
-            - <token value>
-          image: cloudflare/cloudflared:latest
-          name: cloudflared
-          livenessProbe:
-            httpGet:
-              # Cloudflared has a /ready endpoint which returns 200 if and only if
-              # it has an active connection to the edge.
-              path: /ready
-              port: 2000
-            failureThreshold: 1
-            initialDelaySeconds: 10
-            periodSeconds: 10
+          env:
+            - name: TUNNEL_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: cloudflare-tunnel-token-sawyer
+                  key: token
+          command:
+            - /bin/sh
+            - -c
+            - cloudflared tunnel --no-autoupdate run --token $(TUNNEL_TOKEN)
+          resources:
+            limits:
+              cpu: 100m
+              memory: 256Mi
+            requests:
+              cpu: 50m
+              memory: 128Mi
