--- a/deployment/cloudflared.yaml
+++ b/deployment/cloudflared.yaml
@@ -28,6 +28,11 @@ spec:
             - --config
             - /etc/cloudflared/config/config.yaml
             - run
+          env:
+            - name: TUNNEL_TRANSPORT_PROTOCOL
+              value: "http2"
+            - name: TUNNEL_LOGLEVEL
+              value: "debug"
           livenessProbe:
             httpGet:
               # Cloudflared has a /ready endpoint which returns 200 if and only if
