add frontend to config

--- a/deployment/cloudflared.yaml
+++ b/deployment/cloudflared.yaml
@@ -100,6 +100,8 @@ data:
     # The first rule proxies traffic to the httpbin sample Service defined in app.yaml
     - hostname: backend.scnw.cc
       service: http://scope-backend-svc:8000
+    - hostname: frontend.scnw.cc
+      service: http://scope-frontend-svc:30000
     # This rule sends traffic to the built-in hello-world HTTP server. This can help debug connectivity
     # issues. If hello.example.com resolves and tunnel.example.com does not, then the problem is
     # in the connection from cloudflared to your local service, not from the internet to cloudflared.
