--- a/deployment/scope-add-gef-sources-job.yaml
+++ b/deployment/scope-add-gef-sources-job.yaml
@@ -30,8 +30,8 @@ spec:
             - "--gef-db-path=/scope/scope-data/gef/data/gef_document_database.db"
             - "--mysql-host=mysql.scopedata.org"
             - "--mysql-db=scopesql"
-            - "--mysql-user=$(MYSQL_USER)"
-            - "--mysql-password=$(MYSQL_PASSWORD)"
+            # - "--mysql-user=$(MYSQL_USER)"
+            # - "--mysql-password=$(MYSQL_PASSWORD)"
             - "--batch-size=200"
           env:
             - name: MYSQL_USER
