--- a/deployment/ml-api.yml
+++ b/deployment/ml-api.yml
@@ -25,7 +25,7 @@ spec:
           env:
             # Logs
             - name: LOGLEVEL
-              value: "DEBUG"
+              value: "INFO"
             - name: UVICORN_LOGLEVEL
               value: "info"
 
@@ -48,7 +48,7 @@ spec:
               value: "Qwen/Qwen2.5-32B-Instruct-AWQ"
 
             - name: LLM_CONTEXT_WINDOW
-              value: "24576"
+              value: "12288"
             - name: LLM_MAX_OUTPUT_TOKENS
               value: "2048"
             - name: LLM_NUM_OUTPUT
