--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -21,6 +21,7 @@ llama-index-readers-file = "*"
 pydantic = "^2.10.6"
 docx2txt = "^0.8"
 llama-index-multi-modal-llms-openai = "^0.5.0"
+weave = "^0.51.39"
 
 
 [tool.poetry.group.dev.dependencies]
