--- a/deployment/ml-api.yml
+++ b/deployment/ml-api.yml
@@ -66,7 +66,7 @@ spec:
             - name: WANDB_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: wandb-secret
+                  name: wandb-credentials
                   key: WANDB_API_KEY
           resources:
             requests:
