--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -22,6 +22,7 @@ pydantic = "^2.10.6"
 docx2txt = "^0.8"
 llama-index-multi-modal-llms-openai = "^0.5.0"
 weave = "^0.51.39"
+mlflow = "^2.21.2"
 
 
 [tool.poetry.group.dev.dependencies]
