--- a/deployment/models/vllm/qwen2.5vl.yml
+++ b/deployment/models/vllm/qwen2.5vl.yml
@@ -20,7 +20,7 @@ spec:
       containers:
         - name: vllm
           # image: vllm/vllm-openai:v0.7.2
-          image: ghcr.io/wmgeolab/vllm-qwen
+          image: ghcr.io/wmgeolab/vllm-nonroot
           imagePullPolicy: Always
           command: ["/bin/sh", "-c"]
           # args:
